fix: include scrollbar width in emoji sparkle calculation

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -173,6 +173,7 @@ h1 {
 .grade {
   position: absolute;
   font-size: 42px;
+  z-index: -1;
 }
 
 @keyframes fade {
